--- a/app/src/main/res/layout/pet_item.xml
+++ b/app/src/main/res/layout/pet_item.xml
@@ -18,9 +18,9 @@
         android:id="@+id/pet_name"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:textAppearance="@style/TextAppearance.pet_name"
         app:layout_constraintTop_toBottomOf="@id/pet_image"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/aclonica"/>
 
     <TextView
         android:id="@+id/pet_origin"
